fixed partners' logos, main menu and welcome div appearence on mobile devices

--- a/css/main.scss
+++ b/css/main.scss
@@ -7,6 +7,9 @@ abbr {
 	text-decoration: none;
 }
 
+#welcome.container{
+	padding: 0!important;
+}
 
 .section.heading {
 	background-image: url("../img/bg_main.jpg");
